--- a/TimeKeepingAndPayroll/Views/Invoices/Delete.cshtml
+++ b/TimeKeepingAndPayroll/Views/Invoices/Delete.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Employee.Role)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Employee.Role)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.HoursWorked)
         </dt>
 
@@ -34,6 +42,10 @@
         <dd>
             @Html.DisplayFor(model => model.PayPeriodEnd)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PayDate)
+        </dt>
 
         <dd>
             @Html.DisplayFor(model => model.PayDate)
@@ -94,7 +106,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "EmployeeIndex")
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
