--- a/TimeKeepingAndPayroll/Views/Shared/_Layout.cshtml
+++ b/TimeKeepingAndPayroll/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     <li>@Html.ActionLink("Employee", "Index", "Employees")</li>
                     <li>@Html.ActionLink("Attendance", "Index", "Attendances")</li>
                     <li>@Html.ActionLink("Payroll", "EmployeeIndex", "Invoices")</li>
+                    <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
                 </ul>
             </div>
         </div>
