--- a/TimeKeepingAndPayroll/Views/People/Index.cshtml
+++ b/TimeKeepingAndPayroll/Views/People/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<TimeKeepingAndPayroll.Models.Attendance>
+﻿@model IEnumerable<TimeKeepingAndPayroll.Models.Person>
 
 @{
-    ViewBag.Title = "Attendance";
+    ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
@@ -12,13 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Employee.Role)
+            @Html.DisplayNameFor(model => model.Branch.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Timestamp)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Activity)
+            @Html.DisplayNameFor(model => model.Name.Title)
         </th>
         <th></th>
     </tr>
@@ -26,13 +23,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Employee.Role)
+            @Html.DisplayFor(modelItem => item.Branch.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Timestamp)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Activity)
+            @Html.DisplayFor(modelItem => item.Name.Title)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
