--- a/TimeKeepingAndPayroll/Views/Shared/_Layout.cshtml
+++ b/TimeKeepingAndPayroll/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Employee", "Index", "Employees")</li>
+                    <li>@Html.ActionLink("Attendance", "Index", "Attendances")</li>
                     <li>@Html.ActionLink("Payroll", "EmployeeIndex", "Invoices")</li>
                 </ul>
             </div>
