--- a/TimeKeepingAndPayroll/Views/Attendances/Delete.cshtml
+++ b/TimeKeepingAndPayroll/Views/Attendances/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Employee.Role)
+            @Html.DisplayNameFor(model => model.ID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Employee.Role)
+            @Html.DisplayFor(model => model.ID)
         </dd>
 
         <dt>
