--- a/TimeKeepingAndPayroll/Views/Attendances/Details.cshtml
+++ b/TimeKeepingAndPayroll/Views/Attendances/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Employee.Role)
+            @Html.DisplayNameFor(model => model.EmployeeID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Employee.Role)
+            @Html.DisplayFor(model => model.EmployeeID)
         </dd>
 
         <dt>
