--- a/TimeKeepingAndPayroll/Views/Attendances/Index.cshtml
+++ b/TimeKeepingAndPayroll/Views/Attendances/Index.cshtml
@@ -23,7 +23,7 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
+    @foreach (var item in Model.OrderByDescending(p => p.Timestamp))
     {
         <tr>
             <td>
