--- a/TimeKeepingAndPayroll/Views/Shared/_Layout.cshtml
+++ b/TimeKeepingAndPayroll/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
-                    <li>@Html.ActionLink("TimesOff", "Index", "TimesOff")</li>
+                    <li>@Html.ActionLink("Request Time Off", "Create", "TimeOffs")</li>
+                    <li>@Html.ActionLink("Approve Time Off", "Index", "TimeOffs")</li>
                     <li>@Html.ActionLink("Attendances", "Index", "Attendances")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
