--- a/TimeKeepingAndPayroll/Views/Invoices/Create.cshtml
+++ b/TimeKeepingAndPayroll/Views/Invoices/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Employee_ID, "Employee_ID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Employee_ID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("Employee_ID", null, "Select...", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Employee_ID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -111,5 +111,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "EmployeeIndex")
 </div>
