--- a/TimeKeepingAndPayroll/Views/Employees/Create.cshtml
+++ b/TimeKeepingAndPayroll/Views/Employees/Create.cshtml
@@ -39,13 +39,13 @@
         </div>
     </div>*@
 
-    @*<div class="form-group">
-        @Html.LabelFor(model => model.ReportRecipientID, "ReportRecipientID", htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.ReportRecipientID, "Reports To:", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("ReportRecipientID", null, "Select ...", htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.ReportRecipientID, "", new { @class = "text-danger" })
         </div>
-    </div>*@
+    </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.EmployeeID, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -78,7 +78,7 @@
             @Html.ValidationMessageFor(model => model.EmploymentStatus, "", new { @class = "text-danger" })
         </div>
     </div>
-
+    @*
     <div class="form-group">
         @Html.LabelFor(model => model.ReportsTo, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -102,7 +102,7 @@
             @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
         </div>
     </div>
-
+    *@
     <div class="form-group">
         @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
