--- a/TimeKeepingAndPayroll/Views/Shared/_FullName.cshtml
+++ b/TimeKeepingAndPayroll/Views/Shared/_FullName.cshtml
@@ -1,13 +1,13 @@
 ﻿@model TimeKeepingAndPayroll.Models.FullName
 <h4>Name</h4>
 <hr/>
-<div class="form-group">
+@*<div class="form-group">
     @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
     <div class="col-md-10">
         @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
     </div>
-</div>
+</div>*@
 
 <div class="form-group">
     @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
