--- a/TimeKeepingAndPayroll/Views/Invoices/EmployeeIndex.cshtml
+++ b/TimeKeepingAndPayroll/Views/Invoices/EmployeeIndex.cshtml
@@ -17,6 +17,9 @@
             Pay Period
         </th>
         <th>
+            Total Pay
+        </th>
+        <th>
             Email
         </th>
         <th>
@@ -26,26 +29,27 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Convert.ToDateTime(item.PayDate).ToString("dd/MM/yyyy")
-            </td>
-            <td>
-                @Convert.ToDateTime(item.PayPeriodStart).ToString("dd/MM/yyyy") -
-                @Convert.ToDateTime(item.PayPeriodEnd).ToString("dd/MM/yyyy")
-            </td>
-            <td>
-                @Html.ActionLink(" ", "Email", new { id = item.ID }, new { @class = "glyphicon glyphicon-envelope" })
-            </td>
-            <td>
-                @Html.ActionLink(" ", "Details", new { id = item.ID }, new { @class = "glyphicon glyphicon-print"})
-            </td>
-            <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.ID }) |*@
-                @Html.ActionLink("Details", "Details", new { id = item.ID })
-                @*@Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
-            </td>
-        </tr>
+<tr>
+    <td>
+        @Convert.ToDateTime(item.PayDate).ToString("dd/MM/yyyy")
+    </td>
+    <td>
+        @Convert.ToDateTime(item.PayPeriodStart).ToString("dd/MM/yyyy") -
+        @Convert.ToDateTime(item.PayPeriodEnd).ToString("dd/MM/yyyy")
+    </td>
+    <td>
+       @Html.DisplayFor(modelItem => item.NetAmount)
+    </td>
+    <td>
+        @Html.ActionLink(" ", "Email", new { id = item.ID }, new { @class = "glyphicon glyphicon-envelope" })
+    </td>
+    <td>
+        @Html.ActionLink(" ", "Details", new { id = item.ID }, new { @class = "glyphicon glyphicon-print" })
+    </td>
+    <td>
+        @Html.ActionLink("Details", "Details", new { id = item.ID })
+    </td>
+</tr>
     }
 
 </table>
