--- a/TimeKeepingAndPayroll/Views/Shared/_Layout.cshtml
+++ b/TimeKeepingAndPayroll/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                     <li>@Html.ActionLink("Request Time Off", "Index", "TimeOffs")</li>
                     <li>@Html.ActionLink("Approve Time Off", "ManagerIndex", "TimeOffs")</li>
                     <li>@Html.ActionLink("Payroll", "EmployeeIndex", "Invoices")</li>
+                    <li>@Html.ActionLink("Manage Payroll", "ManagerIndex", "Invoices")</li>
                 </ul>
             </div>
         </div>
