--- a/TimeKeepingAndPayroll/Views/Attendances/Create.cshtml
+++ b/TimeKeepingAndPayroll/Views/Attendances/Create.cshtml
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Timestamp, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Timestamp, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })
+                @Html.EditorFor(model => model.Timestamp, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local", @max = "2999-01-01T22:22:55" } })
                 @Html.ValidationMessageFor(model => model.Timestamp, "", new { @class = "text-danger" })
             </div>
         </div>
