--- a/TimeKeepingAndPayroll/Views/TimeOffs/Index.cshtml
+++ b/TimeKeepingAndPayroll/Views/TimeOffs/Index.cshtml
@@ -4,16 +4,13 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>My Requests</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Employee.Role)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.StartDate)
         </th>
@@ -31,9 +28,6 @@
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Employee.Role)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.StartDate)
         </td>
