--- a/TimeKeepingAndPayroll/Views/TimeOffs/Index.cshtml
+++ b/TimeKeepingAndPayroll/Views/TimeOffs/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<p>
+    You Have @ViewBag.PendingRequests Pending Requests
+</p>
 <table class="table">
     <tr>
         <th>
