--- a/TimeKeepingAndPayroll/Views/Attendances/Create.cshtml
+++ b/TimeKeepingAndPayroll/Views/Attendances/Create.cshtml
@@ -18,10 +18,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.EmployeeID, "EmployeeID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Employee.EmployeeID, "EmployeeID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("EmployeeID", null, "Select ...", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.EmployeeID, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Employee.EmployeeID, "", new { @class = "text-danger" })
             </div>
         </div>
 
