--- a/TimeKeepingAndPayroll/Views/Attendances/Edit.cshtml
+++ b/TimeKeepingAndPayroll/Views/Attendances/Edit.cshtml
@@ -20,10 +20,10 @@
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EmployeeID, "EmployeeID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Employee.EmployeeID, "EmployeeID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("EmployeeID", null, "Select ...", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.EmployeeID, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Employee.EmployeeID, "", new { @class = "text-danger" })
             </div>
         </div>
 
