--- a/TimeKeepingAndPayroll/Views/Attendances/Index.cshtml
+++ b/TimeKeepingAndPayroll/Views/Attendances/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.EmployeeID)
+            @Html.DisplayNameFor(model => model.Employee.EmployeeID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Timestamp)
@@ -27,7 +27,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.EmployeeID)
+                @Html.DisplayFor(modelItem => item.Employee.EmployeeID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Timestamp)
