--- a/TimeKeepingAndPayroll/Views/Invoices/ManagerIndex.cshtml
+++ b/TimeKeepingAndPayroll/Views/Invoices/ManagerIndex.cshtml
@@ -7,7 +7,7 @@
 <h2>Manager View</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "CreateSelectDates")
 </p>
 <table class="table">
     <tr>
