Add login and session

--- a/TimeKeepingAndPayroll/Views/Employees/Login.cshtml
+++ b/TimeKeepingAndPayroll/Views/Employees/Login.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TimeKeepingAndPayroll.Models.Employee
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Punch In";
 }
 
-<h2>Login</h2>
+<h2>Punch In</h2>
 <hr />
 @using (Html.BeginForm("Login", "Employees", FormMethod.Post))
 {
