--- a/TimeKeepingAndPayroll/Views/Attendances/EditAttendance.cshtml
+++ b/TimeKeepingAndPayroll/Views/Attendances/EditAttendance.cshtml
@@ -33,7 +33,7 @@
                 @Html.DisplayFor(modelItem => item.Activity)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EmployeeID)
+                @Html.DisplayFor(modelItem => item.Employee.EmployeeID)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
